# papal

./: .gitignore  README.md  boys_surface.py  catenoid.py  cross_cap.py  dinis_surface.py  enneper_surface.py  gyroid.py  helicoid.py  klein_bottle.py  main.py  mobius_strip.c  mobius_strip.py  pyproject.toml  roman_surface.py  scherk_minimal.py  schwarz_p_surface.py  torus.py  whitney_umbrella.py
